--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -2,7 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
   {% include 'base/head.html' %}
+</head>
 
 <body>
 
@@ -17,8 +19,11 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  
 
+  <!-- Optional custom script -->
+  <script src="{% static 'js/script.js' %}"></script>
+
+  <!-- Product dropdown redirect script -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const link = document.querySelector('.hover-dropdown > a');
