--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -63,6 +63,11 @@
   .social-sidebar i {
     font-size: 18px;
   }
+  .nav-item.dropdown > a:first-child {
+  border-right: 1px solid rgba(255,255,255,0.3);
+  margin-right: 3px;
+}
+
 </style>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
