--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -83,10 +83,9 @@
 
         <!-- Dropdown -->
         <li class="nav-item dropdown">
-         <a class="nav-link dropdown-toggle" href="{% url 'products' %}" id="productsDropdown" role="button">
-  Products <span class="toggle-sub-menu"></span>
-</a>
-
+          <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button">
+            Products <span class="toggle-sub-menu"></span>
+          </a>
           <ul class="dropdown-menu" aria-labelledby="productsDropdown">
             <li><a class="dropdown-item" href="{% url 'u-panel-fibc' %}">U Panel FIBC</a></li>
             <li><a class="dropdown-item" href="{% url 'circular-fibc' %}">Circular FIBC</a></li>
