--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -88,7 +88,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="productsDropdown">
             <li><a class="dropdown-item" href="{% url 'u_panel_fibc' %}">U Panel FIBC</a></li>
-            <li><a class="dropdown-item" href="{% url 'circular-fibc' %}">Circular FIBC</a></li>
+            <li><a class="dropdown-item" href="{% url 'circular_fibc' %}">Circular FIBC</a></li>
             <li><a class="dropdown-item" href="{% url 'baffle-fibc-bags' %}">Baffle FIBC Bags</a></li>
             <li><a class="dropdown-item" href="{% url 'un-fibc-bags' %}">UN FIBC Bags</a></li>
             <li><a class="dropdown-item" href="{% url 'food-grade-fibc-bags' %}">Food Grade FIBC Bags</a></li>
