--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -89,18 +89,19 @@
           <ul class="dropdown-menu" aria-labelledby="productsDropdown">
             <li><a class="dropdown-item" href="{% url 'u_panel_fibc' %}">U Panel FIBC</a></li>
             <li><a class="dropdown-item" href="{% url 'circular_fibc' %}">Circular FIBC</a></li>
-            <li><a class="dropdown-item" href="{% url 'baffle-fibc-bags' %}">Baffle FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'un-fibc-bags' %}">UN FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'food-grade-fibc-bags' %}">Food Grade FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'ventilated-fibc-bags' %}">Ventilated FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'conductive-fibc-bags' %}">Conductive FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'fibc-liners' %}">FIBC Liners</a></li>
-            <li><a class="dropdown-item" href="{% url 'pp-woven-ground-cover' %}">PP Woven Ground Cover</a></li>
-            <li><a class="dropdown-item" href="{% url 'fibc-bags' %}">FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'dissipative-fibc-bags' %}">Dissipative FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url '4-panel-fibc-bags' %}">4 Panel FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'conical-fibc-bags' %}">Conical FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'pharma-grade-fibc-bags' %}">Pharma Grade FIBC Bags</a></li>
+           <li><a class="dropdown-item" href="{% url 'baffle_fibc_bags' %}">Baffle FIBC Bags</a></li>
+<li><a class="dropdown-item" href="{% url 'un_fibc_bags' %}">UN FIBC Bags</a></li>
+<li><a class="dropdown-item" href="{% url 'food_grade_fibc_bags' %}">Food Grade FIBC Bags</a></li>
+<li><a class="dropdown-item" href="{% url 'ventilated_fibc_bags' %}">Ventilated FIBC Bags</a></li>
+<li><a class="dropdown-item" href="{% url 'conductive_fibc_bags' %}">Conductive FIBC Bags</a></li>
+<li><a class="dropdown-item" href="{% url 'fibc_liners' %}">FIBC Liners</a></li>
+<li><a class="dropdown-item" href="{% url 'pp_woven_ground_cover' %}">PP Woven Ground Cover</a></li>
+<li><a class="dropdown-item" href="{% url 'fibc_bags' %}">FIBC Bags</a></li>
+<li><a class="dropdown-item" href="{% url 'dissipative_fibc_bags' %}">Dissipative FIBC Bags</a></li>
+<li><a class="dropdown-item" href="{% url 'four_panel_fibc_bags' %}">4 Panel FIBC Bags</a></li>
+<li><a class="dropdown-item" href="{% url 'conical_fibc_bags' %}">Conical FIBC Bags</a></li>
+<li><a class="dropdown-item" href="{% url 'pharma_grade_fibc_bags' %}">Pharma Grade FIBC Bags</a></li>
+
           </ul>
         </li>
 
